@@ -64,6 +64,7 @@ class Event extends \XoopsObject
         $this->initVar('dateto', \XOBJ_DTYPE_INT);
         $this->initVar('contact', \XOBJ_DTYPE_TXTAREA);
         $this->initVar('email', \XOBJ_DTYPE_TXTBOX);
+        $this->initVar('url', \XOBJ_DTYPE_TXTBOX);
         $this->initVar('location', \XOBJ_DTYPE_TXTAREA);
         $this->initVar('locgmlat', \XOBJ_DTYPE_FLOAT);
         $this->initVar('locgmlon', \XOBJ_DTYPE_FLOAT);
@@ -84,6 +85,7 @@ class Event extends \XoopsObject
         $this->initVar('status', \XOBJ_DTYPE_INT);
         $this->initVar('galid', \XOBJ_DTYPE_INT);
         $this->initVar('identifier', \XOBJ_DTYPE_TXTBOX);
+        $this->initVar('groups', \XOBJ_DTYPE_TXTBOX);
         $this->initVar('datecreated', \XOBJ_DTYPE_INT);
         $this->initVar('submitter', \XOBJ_DTYPE_INT);
     }
@@ -214,6 +216,8 @@ class Event extends \XoopsObject
         $form->addElement(new \XoopsFormTextArea(\_MA_WGEVENTS_EVENT_CONTACT, 'contact', $this->getVar('contact', 'e'), 4, 30));
         // Form Text evEmail
         $form->addElement(new \XoopsFormText(\_MA_WGEVENTS_EVENT_EMAIL, 'email', 50, 255, $this->getVar('email')));
+        // Form Text evUrl
+        $form->addElement(new \XoopsFormText(\_MA_WGEVENTS_EVENT_URL, 'url', 50, 255, $this->getVar('url')));
         // Location
         // Form Editor TextArea evLocation
         $evLocation = $this->isNew() ? '' : $this->getVar('location', 'e');
@@ -320,6 +324,27 @@ class Event extends \XoopsObject
             $evGalidSelect->addOptionArray($albumHandler->getList());
             $form->addElement($evGalidSelect);
             */
+        }
+        // Form Select evGroups
+        if ($helper->getConfig('use_groups')) {
+            if ($this->isNew()) {
+                $groups = [0];
+            } else {
+                $groups = \explode("|", $this->getVar('groups'));
+            }
+            $evGroupsSelect = new \XoopsFormSelect(\_MA_WGEVENTS_EVENT_GROUPS, 'groups', $groups, 5, true);
+            $evGroupsSelect->addOption(0, \_MA_WGEVENTS_EVENT_GROUPS_ALL);
+            // Get groups
+            $memberHandler = \xoops_getHandler('member');
+            $xoopsGroups = $memberHandler->getGroupList();
+            foreach ($xoopsGroups as $key => $group) {
+                if (3 !== (int)$key) {
+                    $evGroupsSelect->addOption(substr('00000' . $key,  -5), $group);
+                }
+            }
+            $form->addElement($evGroupsSelect, true);
+        } else {
+            $form->addElement(new \XoopsFormHidden('groups', '00000'));
         }
         // Form Select Status evStatus
         // Form Text Date Select evDatecreated
@@ -518,9 +543,25 @@ class Event extends \XoopsObject
             $ret['register_notify_user']  = \implode('<br>', $notifyEmails);
         }
         $ret['register_forceverif_text'] = (int)$this->getVar('register_forceverif') > 0 ? \_YES : \_NO;
-        $ret['status_text']              = Utility::getStatusText($this->getVar('status'));
-        $ret['datecreated_text']         = \formatTimestamp($this->getVar('datecreated'), 's');
-        $ret['submitter_text']           = \XoopsUser::getUnameFromId($this->getVar('submitter'));
+        $evGroups                        = $this->getVar('groups', 'e');
+        $groups_text                     = '';
+        if (0 == (int)$evGroups) {
+            $groups_text = \_MA_WGEVENTS_EVENT_GROUPS_ALL;
+        } else {
+            // Get groups
+            $groups_text .= '<ul>';
+            $memberHandler = \xoops_getHandler('member');
+            $xoopsGroups  = $memberHandler->getGroupList();
+            $groups   = explode("|", $evGroups);
+            foreach ($groups as $group) {
+                $groups_text .= '<li>' . $xoopsGroups[(int)$group] .  '</li>' ;
+            }
+            $groups_text .= '</ul>';
+        }
+        $ret['groups_text']      = $groups_text;
+        $ret['status_text']      = Utility::getStatusText($this->getVar('status'));
+        $ret['datecreated_text'] = \formatTimestamp($this->getVar('datecreated'), 's');
+        $ret['submitter_text']   = \XoopsUser::getUnameFromId($this->getVar('submitter'));
         return $ret;
     }
 
